# alg-testing

./: .gitignore  CMakeLists.txt
include/: main.h  rectadj.h
src/: main.cpp  rectadj.cpp
util/: draw_data.py  generate_graphs.bat  generate_graphs.sh  graph_generator.py
